# perfetto-recorder

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  test
.github/workflows/: ci.yml
examples/: benchmark.rs  counters.rs  rayon.rs
proto/: README.md  perfetto.protos.rs  perfetto_trace.proto  regenerate.rs
src/: lib.rs  os_unix.rs  os_windows.rs  schema.rs
