[package]
name = "perfetto-recorder"
version = "0.3.0"
edition = "2024"
description = "A low overhead way to record perfetto traces from Rust code"
repository = "https://github.com/davidlattimore/perfetto-recorder"
readme = "README.md"
license = "MIT OR Apache-2.0"
rust-version = "1.88.0"

[dependencies]
fastant = { version = "0.1.10", optional = true }
prost = "0.14.1"
rand = "0.9.2"

[target.'cfg(unix)'.dependencies]
nix = {version = "0.30.1", features = ["process"]}

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Threading"] }

[dev-dependencies]
anyhow = "1.0.100"
rayon = "1.11.0"

[profile.opt-debug]
inherits = "release"
debug = true

[features]

# Turn this feature on from your binary in order to capture trace information.
enable = []

# Enable use of fastant for getting timestamps. Note, this incurs about a 20 ms delay at program
# startup. If you use this,  it's suggested that you enable it together with the enable feature. The
# up-side of using this is that each span only costs about 50ns rather than about 115ns.
fastant = ["dep:fastant"]
